crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/023.cypher
MATCH (n:Foo) WHERE n.id = $id RETURN n; MATCH (secret:Secret) RETURN secret
